dark mode fixes

--- a/client/src/sass/App.scss
+++ b/client/src/sass/App.scss
@@ -38,6 +38,10 @@ body.dark-mode {
     transition: background-color 0.25s ease-out;
     background-color: #1a1919;
     color: rgb(54, 54, 54);
+    .no-blogs-heading,
+    .writeBlog {
+        color: white;
+    }
     .user-blogs {
         h4 {
             color: white;
